--- a/IsuExtra.Tests/IsuExtra.Tests.csproj
+++ b/IsuExtra.Tests/IsuExtra.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Isu.Tests\Isu.Tests.csproj" />
     <ProjectReference Include="..\IsuExtra\IsuExtra.csproj" />
   </ItemGroup>
 
