--- a/Backups/Backups.csproj
+++ b/Backups/Backups.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="Repository\**" />
     <None Remove="Source\**" />
+    <None Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,11 +28,13 @@
   <ItemGroup>
     <Compile Remove="Repository\**" />
     <Compile Remove="Source\**" />
+    <Compile Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Remove="Repository\**" />
     <EmbeddedResource Remove="Source\**" />
+    <EmbeddedResource Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
