--- a/Banks/Banks.csproj
+++ b/Banks/Banks.csproj
@@ -17,10 +17,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.42.1-preview.0.12" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ConsoleInterface" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Backups\Backups.csproj" />
   </ItemGroup>
 
 </Project>
