--- a/BackupsExtra.Tests/BackupsExtra.Tests.csproj
+++ b/BackupsExtra.Tests/BackupsExtra.Tests.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BackupsExtra\BackupsExtra.csproj" />
+    <ProjectReference Include="..\Backups\Backups.csproj" />
+  </ItemGroup>
+
 </Project>
